# SCPA-Project

./: CMakeLists.txt  README.md  cuda.sub  prova.c
APPUNTI/: NOTE.txt
CUDA_libs/: csrOperations.h  csrTool.h  cudaCostants.h  data_structure.h  hllOperations.h  hllTool.h
CUDA_src/: 00-deviceQuery.cpp  CMakeLists.txt  csr.cu  csrOperations.cu  csrTool.cu  deviceQuery  hll_Operations.cu  hll_ellpack_Tool.cu  main  main_app.cu  main_app_cuda.cu
Documentazione/: Main_app.txt
libs/: costants.h  csrOperations.h  csrSerialized.h  csrTool.h  data_structure.h  ellpackTool.h  hllTool.h  hll_Operations.h  hll_ellpack_Tool.h  matrixLists.h  mmio.h
python_graph/: efficienza.py  flops.py  istogramma.py  speedup.py
result/: par_mp_CSR.json  risultati.txt  serial_CSR.json
result/final/: par_OpenMP_CSR.json  par_OpenMP_HLL.json  serial_CSR.json
result/iteration/: par_OpenMP_CSR.json  par_OpenMP_HLL.json  serial_CSR.json
src/: Makefile  csrOperations.c  csrSerialized.c  csrTool.c  ellpackTool.c  functionsIO.c  hllTool.c  hll_Operations.c  hll_ellpack_Tool.c  main_app.c
